# libxcb-glib

./: .gitignore  CNAME  Makefile.am  configure.ac  index.html
data/: libxcb-glib.pc.in
include/: libxcb-glib-source.h  libxcb-glib-types.h  libxcb-glib-window.h  libxcb-glib.h
src/: libxcb-glib-source-internal.h  libxcb-glib-source.c  libxcb-glib-window-internal.h  libxcb-glib-window.c  libxcb-glib.mk  libxcb-glib.sym
